...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text">

    </TextView>
    <EditText
        android:id="@+id/passwordSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">

    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:onClick="login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"/>
...
